# GaussianPI

./: LICENSE  README.md
bayesian_backend/: .gitignore  pyproject.toml
bayesian_backend/src/: loss_function.py  main.py  matlab_interface.py  old_main.py  optimizer.py  plot.py
matlab/: Lab_1_Closed_Loop_v1.slx  Lab_1_Closed_Loop_v1.slx.original  Lab_1_Closed_Loop_v1.slxc  Lab_1_Closed_Loop_v1_copy.slx
